--- a/5/mobile/certification/index.html
+++ b/5/mobile/certification/index.html
@@ -63,7 +63,7 @@
 
 <li class="center-text"><a href="https://coursera.org/share/bed60c17801a769d1d533eeadc661c58" target="_blank"> <img src="img/Initiating and Planning Projects.jpg" alt="Pranay's Initiating and Planning Projects Certificate" title="My Initiating and Planning Projects Certificate"/></a>Initiating and Planning Projects</li>
 
-<li class="center-text"><a > <img src="img/SAGA Simulation using STARS.jpg" alt="Pranay's SAGA Simulation using STARS Certificate" class="hig" title="My SAGA Simulation using STARS Certificate"/></a>SAGA Simulation using STARS</li>
+<li class="center-text"><a > <img src="img/SAGA Simulation using STARS.jpg" class="hig" alt="Pranay's SAGA Simulation using STARS Certificate" title="My SAGA Simulation using STARS Certificate"/></a>SAGA Simulation using STARS</li>
 
        
 </ul>
