--- a/5/mobile/index.html
+++ b/5/mobile/index.html
@@ -52,7 +52,7 @@
   </head>
  
   <body style="overflow-x: hidden; " >
-     <div data-server-rendered="true" id="__nuxt"><!----<div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
+     <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
     </div>
 
 
@@ -232,7 +232,7 @@
                </ol>
              </div>
              <div class="card-read-more">
-              <a href="#" class="btn btn-link btn-block" target="_blank">
+              <a href="documents/IRM Internship Report.pdf" class="btn btn-link btn-block" target="_blank">
                 Read More
               </a>
             </div>
